<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/allTransactionsFragment2"
        android:icon="@drawable/ic_all_transaction_list"
        android:title="@string/all_transactions" />
    <item
        android:id="@+id/dayTransactionsFragment"
        android:icon="@drawable/ic_day_calendar"
        android:title="@string/day_report" />
    <item
        android:id="@+id/monthTransactionFragment"
        android:icon="@drawable/ic_month_calendar"
        android:title="@string/monthly_report" />
    <item
        android:id="@+id/item_categories"
        android:icon="@drawable/ic_category_add"
        android:title="@string/categories" />
    <item
        android:id="@+id/item_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />
    <item
        android:id="@+id/item_rate_app"
        android:icon="@drawable/ic_star"
        android:title="@string/rate_app" />

</menu>