<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.add_transactions.AddTransactionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    <RelativeLayout
        android:id="@+id/rlToolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="12dp"
            android:background="@color/bg_color"
            android:padding="8dp"
            android:src="@drawable/ic_back"
            android:tint="@color/black"

            />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/add_transactions"
            android:textColor="@color/black"
            android:textSize="22sp" />

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_date"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        app:boxCornerRadiusBottomEnd="@dimen/et_corner_radius"
        app:boxCornerRadiusBottomStart="@dimen/et_corner_radius"
        app:boxCornerRadiusTopEnd="@dimen/et_corner_radius"
        app:boxCornerRadiusTopStart="@dimen/et_corner_radius"
        app:boxStrokeWidth="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rlToolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:clickable="false"
            android:inputType="none"
            android:cursorVisible="false"
            android:hint="@string/date" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_amount"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        app:boxCornerRadiusBottomEnd="@dimen/et_corner_radius"
        app:boxCornerRadiusBottomStart="@dimen/et_corner_radius"
        app:boxCornerRadiusTopEnd="@dimen/et_corner_radius"
        app:boxCornerRadiusTopStart="@dimen/et_corner_radius"
        app:boxStrokeWidth="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_date">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/amount" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_transaction_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/type"
        android:textColor="@color/text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_amount" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupTransactionType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        app:checkedChip="@+id/chip_expense"
        app:layout_constraintBottom_toBottomOf="@+id/tv_transaction_type"
        app:layout_constraintStart_toEndOf="@+id/tv_transaction_type"
        app:layout_constraintTop_toTopOf="@+id/tv_transaction_type"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_expense"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expense"

            android:textColor="@color/text_color" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_income"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/income"
            android:textColor="@color/text_color" />


    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/tv_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:textColor="@color/text_color"
        android:text="@string/category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_transaction_type" />

    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="227dp"
        android:layout_height="43dp"
        android:layout_marginStart="24dp"
        android:entries="@array/category_arr"
        app:layout_constraintBottom_toBottomOf="@+id/tv_category"
        app:layout_constraintStart_toEndOf="@+id/tv_category"
        app:layout_constraintTop_toTopOf="@+id/tv_category" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_note"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        app:boxCornerRadiusBottomEnd="@dimen/et_corner_radius"
        app:boxCornerRadiusBottomStart="@dimen/et_corner_radius"
        app:boxCornerRadiusTopEnd="@dimen/et_corner_radius"
        app:boxCornerRadiusTopStart="@dimen/et_corner_radius"
        app:boxStrokeWidth="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCategory">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupPaymentType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"

        android:layout_marginTop="32dp"
        app:checkedChip="@+id/chip_expense"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_note"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_cash"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/cash"
            android:textColor="@color/text_color" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_card"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card"
            android:textColor="@color/text_color" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_add"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="false"
            android:text="..."
            android:textColor="@color/text_color" />

    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/app_name"
        android:focusable="true"
        android:src="@drawable/ic_save"
        app:backgroundTint="@color/fab_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/fab_src" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>