<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/co_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <RelativeLayout
                android:id="@+id/rlToolbar"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/add_filter"
                    android:textColor="@color/black"
                    android:textSize="22sp" />

                <ImageButton
                    android:id="@+id/iv_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:background="@color/bg_color"
                    android:padding="8dp"
                    android:src="@drawable/ic_close"
                    android:tint="@color/black" />

            </RelativeLayout>

            <Spinner
                android:id="@+id/spinnerDateRange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="24dp"
                android:entries="@array/filter_arr"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rlToolbar" />

            <LinearLayout
                android:id="@+id/linearLayoutDateRange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:visibility="visible"
                android:weightSum="2"
                tools:visibility="visible">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFromDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:text=""
                    android:cursorVisible="false"
                    />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etToDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:cursorVisible="false"
                    android:text="" />

            </LinearLayout>

            <TextView
                android:id="@+id/label_categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/roboto_regular"

                android:text="@string/categories"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerDateRange" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group_categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:singleSelection="true"

                android:padding="8dp"
                app:selectionRequired="true"
                app:layout_constraintTop_toBottomOf="@+id/label_categories">

           <!--     <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/all_categories"

                    />-->

            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/label_payment_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/payment_type"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chip_group_categories" />


            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group_payment_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:padding="8dp"
                app:singleSelection="true"
                app:selectionRequired="true"
                app:layout_constraintTop_toBottomOf="@+id/label_payment_type">


            </com.google.android.material.chip.ChipGroup>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>