<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.yearly_transactions.YearTransactionFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Yearly Report" />

    <RelativeLayout
        android:id="@+id/rl_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:layout_editor_absoluteX="0dp">

        <ImageView
            android:id="@+id/buttonPrevious"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/tv_date"
            android:padding="12dp"
            android:src="@drawable/ic_arrow_back"
            app:tint="@color/text_color" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/quicksand_medium"
            android:text="1998"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/buttonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/tv_date"
            android:padding="12dp"
            android:src="@drawable/ic_arrow_next"
            app:tint="@color/text_color" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:padding="12dp"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_date">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:clipChildren="false"
            android:clipToPadding="false"
            app:cardCornerRadius="10dp"
            app:cardElevation="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/layout_border_expense"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:padding="12dp">

                <ImageView
                    android:id="@+id/iv_spending_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_upload" />

                <TextView
                    android:id="@+id/label_spend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="12dp"

                    android:fontFamily="@font/quicksand_medium"
                    android:text="@string/expense"
                    android:textColor="@color/text_color"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_money_spent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/label_spend"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="12dp"
                    android:layout_toEndOf="@+id/iv_spending_icon"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/_0_0"
                    android:textColor="@color/text_color"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:clipChildren="false"
            android:clipToPadding="false"
            app:cardCornerRadius="10dp"
            app:cardElevation="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/layout_border_income"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:padding="12dp">

                <ImageView
                    android:id="@+id/iv_income_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_download" />

                <TextView
                    android:id="@+id/label_income"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="12dp"
                    android:fontFamily="@font/quicksand_medium"
                    android:text="@string/income"
                    android:textColor="@color/text_color"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_money_income"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/label_income"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="12dp"
                    android:layout_toEndOf="@+id/iv_income_icon"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/_0_0"
                    android:textColor="@color/text_color"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:padding="4dp"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toTopOf="@+id/rl_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/text_color" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

</androidx.constraintlayout.widget.ConstraintLayout>